--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "validator": "^10.10.0",
     "yelp-fusion": "^2.2.1"
   },
+  "engines": {
+    "node": "8.12.0"
+  },
   "devDependencies": {
     "nodemon": "^1.18.9"
   }
