--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i": "^0.3.6",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
+    "nodemailer": "^6.3.1",
     "npm": "^6.5.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
